# poehc

./: .gitignore  Cargo.toml  README.md
agent/core/: Cargo.toml
agent/core/examples/: cli_session.rs
agent/core/src/: lib.rs  types.rs
agent/core/src/behavioral/: aggregator.rs  keystroke.rs  mod.rs  mouse.rs
agent/core/src/chain/: client.rs  contracts.rs  mod.rs
agent/core/src/challenges/: cognitive_signature.rs  context_recall.rs  continuity.rs  mod.rs
agent/core/src/cognitive/: mod.rs
agent/core/src/crypto/: mod.rs
agent/core/src/scheduler/: mod.rs
agent/core/tests/: integration_test.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployTestnet.s.sol
contracts/src/: CommitmentMarketplace.sol  CommitmentRegistry.sol  EngagementVerifier.sol  TIMEToken.sol  ValidatorRegistry.sol
contracts/test/: CommitmentMarketplace.t.sol  CommitmentRegistry.t.sol  EngagementVerifier.t.sol  TIMEToken.t.sol  ValidatorRegistry.t.sol
docs/: whitepaper.md  whitepaper.txt
research/: cbb_model.py
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  contracts.rs  lib.rs  types.rs
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: abis.ts  client.ts  index.ts  types.ts
validator/: Cargo.toml
validator/src/: contracts.rs  main.rs
validator/src/consensus/: mod.rs
