[package]
name = "poehc-validator"
version = "0.1.0"
edition = "2021"
description = "PoEHC Validator Node"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
