[package]
name = "poehc-agent-core"
version = "0.1.0"
edition = "2021"
description = "PoEHC Engagement Agent - Core Library"

[dependencies]
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = "0.5"
tokio = { version = "1", features = ["full"] }

# Ethereum interaction via Alloy
alloy = { version = "1", features = ["full"] }

[dev-dependencies]
